--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "next": "^9.3.5",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "pixi.js": "^5.2.1",
+    "socket.io-client": "^2.3.0"
   }
 }
