--- a/front/package.json
+++ b/front/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ant-design/icons": "^4.1.0",
+    "antd": "^4.2.0",
     "next": "^9.3.5",
+    "pixi.js": "^5.2.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "pixi.js": "^5.2.1",
     "socket.io-client": "^2.3.0"
   }
 }
