--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.1.0",
     "antd": "^4.2.0",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^9.3.5",
     "pixi.js": "^5.2.4",
     "react": "^16.13.1",
