--- a/socket/package.json
+++ b/socket/package.json
@@ -7,14 +7,15 @@
     "start": "ts-node ./src/index.ts"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "public-ip": "^4.0.1",
-    "socker.io": "^0.0.0-alpha-beta",
-    "ts-node": "^8.10.1",
-    "typescript": "^3.8.3",
     "@types/express": "^4.17.2",
     "@types/node": "^13.7.0",
     "@types/socket.io": "^2.1.4",
-    "socket.io": "^2.3.0"
+    "axios": "^0.19.2",
+    "express": "^4.17.1",
+    "public-ip": "^4.0.1",
+    "socker.io": "^0.0.0-alpha-beta",
+    "socket.io": "^2.3.0",
+    "ts-node": "^8.10.1",
+    "typescript": "^3.8.3"
   }
 }
