--- a/back/api/question/models/question.settings.json
+++ b/back/api/question/models/question.settings.json
@@ -25,6 +25,9 @@
       "type": "boolean",
       "required": true,
       "private": false
+    },
+    "explain": {
+      "type": "text"
     }
   }
 }
