OAuth, Chatting 전부 다 달았다. 이제 환경변수 생각하면서 배포하면 될듯하다.

--- a/back/api/token/models/token.settings.json
+++ b/back/api/token/models/token.settings.json
@@ -13,6 +13,9 @@
     "created": {
       "type": "boolean",
       "default": true
+    },
+    "character": {
+      "type": "string"
     }
   }
 }
