--- a/back/package.json
+++ b/back/package.json
@@ -7,10 +7,12 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "cli": "NODE_ENV=cli node scripts/cli.js"
   },
   "devDependencies": {},
   "dependencies": {
+    "commander": "^6.1.0",
     "knex": "<0.20.0",
     "sqlite3": "latest",
     "strapi": "3.0.0-beta.19.5",
