--- a/socket/docker-compose.yml
+++ b/socket/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     command: sh /start-dev.sh
     environment:
       - NODE_ENV=development
-      - SERVER_ADDRESS=http://13.209.124.232
+      - SERVER_ADDRESS=http://218.144.17.243/
       - AUTH_IDENTIFIER=daesoo94
       - AUTH_PASSWORD=vndtkstla2
     ports:
